--- a/templates/abonnement/show.html.twig
+++ b/templates/abonnement/show.html.twig
@@ -1,10 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Abonnement{% endblock %}
+
+
 
 {% block body %}
-    <h1>Abonnement</h1>
 
+    <main id="main" class="main">
+
+
+
+
+
+        <section class="section">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="card">
+
+                        {% for message in app.flashes('notice') %}
+                            <div class="alert alert-success bg-success text-light border-0 alert-dismissible fade show" role="alert">
+                                {{ message }}
+                            </div>
+
+                        {% endfor %}
+
+
+                        {% for message in app.flashes('noticedelete') %}
+                            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+                                {{ message }}
+                            </div>
+
+                        {% endfor %}
+
+                        <div class="card-body">
+
+                            <h5 class="card-title">List Articles</h5>
+
+
+                            <!-- Default Table -->
     <table class="table">
         <tbody>
             <tr>
@@ -27,16 +60,18 @@
                 <th>Dateexpiration</th>
                 <td>{{ abonnement.dateexpiration ? abonnement.dateexpiration|date('Y-m-d') : '' }}</td>
             </tr>
-            <tr>
-                <th>IdUser</th>
-                <td>{{ abonnement.idUser }}</td>
-            </tr>
+             <tr>
+             <th><center>
+         <a href="{{ path('app_abonnement_index') }}">back to list</a>
+
+</center></th>
+<th><center>
+        <a href="{{ path('app_abonnement_edit', {'ida': abonnement.ida}) }}">edit</a>
+</center></th>
+</tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_abonnement_index') }}">back to list</a>
-
-    <a href="{{ path('app_abonnement_edit', {'ida': abonnement.ida}) }}">edit</a>
-
+   
     {{ include('abonnement/_delete_form.html.twig') }}
 {% endblock %}
