--- a/templates/cartefidelite/show.html.twig
+++ b/templates/cartefidelite/show.html.twig
@@ -1,16 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Cartefidelite{% endblock %}
+
 
 {% block body %}
-    <h1>Cartefidelite</h1>
+   <main id="main" class="main">
+
+
+
+
+
+        <section class="section">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="card">
+
+                        {% for message in app.flashes('notice') %}
+                            <div class="alert alert-success bg-success text-light border-0 alert-dismissible fade show" role="alert">
+                                {{ message }}
+                            </div>
+
+                        {% endfor %}
+
+
+                        {% for message in app.flashes('noticedelete') %}
+                            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+                                {{ message }}
+                            </div>
+
+                        {% endfor %}
+
+                        <div class="card-body">
+
+                            <h5 class="card-title">List Articles</h5>
+
+
+                            <!-- Default Table -->
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>IdCf</th>
-                <td>{{ cartefidelite.idCf }}</td>
-            </tr>
+           
             <tr>
                 <th>Pointmerci</th>
                 <td>{{ cartefidelite.pointmerci }}</td>
@@ -19,16 +48,20 @@
                 <th>Dateexpiration</th>
                 <td>{{ cartefidelite.dateexpiration ? cartefidelite.dateexpiration|date('Y-m-d') : '' }}</td>
             </tr>
-            <tr>
-                <th>IdUser</th>
-                <td>{{ cartefidelite.idUser }}</td>
-            </tr>
+            
+
+<th><center>
+    <a href="{{ path('app_cartefidelite_index') }}">back to list</a>
+</center></th>
+
+<th><center>
+    <a href="{{ path('app_cartefidelite_edit', {'idCf': cartefidelite.idCf}) }}">edit</a>
+</center></th>
+
         </tbody>
     </table>
 
-    <a href="{{ path('app_cartefidelite_index') }}">back to list</a>
 
-    <a href="{{ path('app_cartefidelite_edit', {'idCf': cartefidelite.idCf}) }}">edit</a>
 
     {{ include('cartefidelite/_delete_form.html.twig') }}
 {% endblock %}
