all CRUD fixed to scenario

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -138,6 +138,36 @@
 
             <li class="nav-item">
                 <a class="nav-link ">
+                    <i class="bi bi-journal-text" ></i><span>iheb</span>
+                </a>
+                <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                   
+                    
+
+                </ul>
+                </a>
+            </li><!-- End Dashboard Nav -->
+            <li class="nav-item">
+                <a class="nav-link ">
+                    <i class="bi bi-journal-text" ></i><span>rahali</span>
+                </a>
+                <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                   
+                    
+
+                </ul>
+                </a>
+            </li><!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link " href="index.html">
+                    <i class="bi bi-bookmark"></i>
+                    <span>rim</span>
+                </a>
+            </li><!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+               <a class="nav-link ">
                     <i class="bi bi-journal-text" ></i><span>Membership management</span>
                 </a>
                 <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
@@ -159,24 +189,10 @@
                 </ul>
                 </a>
             </li><!-- End Dashboard Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link " href="index.html">
-                    <i class="bi bi-bookmark"></i>
-                    <span>Gestion commandes</span>
-                </a>
-            </li><!-- End Dashboard Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link " href="index.html">
-                    <i class="bi bi-calendar-event"></i>
-                    <span>Gestion évènement </span>
-                </a>
-            </li><!-- End Dashboard Nav -->
             <li class="nav-item">
                 <a class="nav-link " href="index.html">
                     <i class="bi bi-archive"></i>
-                    <span>Gestion réclamation </span>
+                    <span>taher </span>
                 </a>
             </li><!-- End Dashboard Nav -->
         </ul>
