--- a/templates/cartefidelite/edit.html.twig
+++ b/templates/cartefidelite/edit.html.twig
@@ -1,13 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Cartefidelite{% endblock %}
+{% block title %}Edit Abonnement{% endblock %}
 
 {% block body %}
-    <h1>Edit Cartefidelite</h1>
+<main id="main" class="main">
+    <div class="pagetitle">
+    </div><!-- End Page Title -->
 
-    {{ include('cartefidelite/_form.html.twig', {'button_label': 'Update'}) }}
+    <section class="section">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    {% for message in app.flashes('notice') %}
+                        <div class="alert alert-success bg-success text-light border-0 alert-dismissible fade show" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
 
-    <a href="{{ path('app_cartefidelite_index') }}">back to list</a>
+                    {% for message in app.flashes('noticedelete') %}
+                        <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
 
-    {{ include('cartefidelite/_delete_form.html.twig') }}
+                    <div class="card-body">
+                        <h5 class="card-title"> Edit cartefidelite</h5>
+
+                        <!-- Default Table -->
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <th>
+                                        <center>
+                                            {{ include('cartefidelite/_form.html.twig', {'button_label': 'Update'}) }}
+                                        </center>
+                                    </th>
+                                </tr>
+                            </tbody>
+                        </table><!-- Closing table tag -->
+
+                        <div class="back-to-list">
+                            <a href="{{ path('app_cartefidelite_index') }}">back to list</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 {% endblock %}
