--- a/templates/cartefidelite/show.html.twig
+++ b/templates/cartefidelite/show.html.twig
@@ -48,11 +48,15 @@
                 <th>Dateexpiration</th>
                 <td>{{ cartefidelite.dateexpiration ? cartefidelite.dateexpiration|date('Y-m-d') : '' }}</td>
             </tr>
-            
+              <tr>
+                   <td> <a href="{{ path('app_cartefidelite_edit', {'idCf': cartefidelite.idCf}) }}">edit</a></td>
 
-<th><center>
+            </tr>
+
+<th>
+
     <a href="{{ path('app_cartefidelite_index') }}">back to list</a>
-</center></th>
+</th>
 
 
 
