--- a/templates/highscores/show.html.twig
+++ b/templates/highscores/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'indexClient.html.twig' %}
 
 {% block title %}Highscores{% endblock %}
 
@@ -7,24 +7,14 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Ids</th>
-                <td>{{ highscore.ids }}</td>
-            </tr>
+            
             <tr>
                 <th>Score</th>
                 <td>{{ highscore.score }}</td>
             </tr>
-            <tr>
-                <th>IdUser</th>
-                <td>{{ highscore.idUser }}</td>
-            </tr>
+            
         </tbody>
     </table>
 
-    <a href="{{ path('app_highscores_index') }}">back to list</a>
-
-    <a href="{{ path('app_highscores_edit', {'ids': highscore.ids}) }}">edit</a>
-
-    {{ include('highscores/_delete_form.html.twig') }}
+   
 {% endblock %}
