--- a/templates/indexClient.html.twig
+++ b/templates/indexClient.html.twig
@@ -64,7 +64,7 @@
                              <li>   <a href="{{ path('app_abonnement_newC') }}">Buy New membership</a></li>
                              <li>   <a href="{{ path('app_abonnement_newC') }}">Earn Tokens</a></li>
                             
-                            <li><a href="{{ path('app_highscores_show', {ids: highscore.ids}) }}">show</a>   </li>
+                            <li><a href="{{ path('app_highscores_show') }}">show</a>   </li>
 
                              
 
