--- a/templates/indexClient.html.twig
+++ b/templates/indexClient.html.twig
@@ -62,7 +62,7 @@
                     <li class="dropdown"><a href="#"><span>Membership</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                              <li>   <a href="{{ path('app_abonnement_newC') }}">Buy New membership</a></li>
-                             <li>   <a href="{{ path('app_abonnement_newC') }}">Earn Tokens</a></li>
+                             <li><a href="{{ path('unity_game') }}">Unity game</a></li>
                             
                 <li><a href="{{ path('app_highscores_indexClient') }}">Wallet</a></li>
 
