--- a/templates/unity_game/index.html.twig
+++ b/templates/unity_game/index.html.twig
@@ -4,5 +4,10 @@
 
 {% block body %}
     <h1>Unity Game</h1>
-    <iframe id='webgl_iframe' frameborder="0" allow="autoplay; fullscreen; vr" allowfullscreen="" allowvr="" mozallowfullscreen="true" src="https://play.unity.com/webgl/5eb3aaa0-ddf5-43f8-9929-ae780d42bb73?screenshot=false&embedType=embed" width="810" height="640" onmousewheel="" webkitallowfullscreen="true"></iframe>
+    
+<iframe id='webgl_iframe' frameborder="0" allow="autoplay; fullscreen; vr" allowfullscreen="" allowvr=""
+    mozallowfullscreen="true" src="https://play.unity.com/webgl/e4f3e95d-b1cd-4fd6-8694-9d0634fbfbec?screenshot=false&embedType=embed"  width="810"
+    height="640" onmousewheel="" webkitallowfullscreen="true"></iframe>
+
+
 {% endblock %}
