--- a/templates/abonnement/newC.html.twig
+++ b/templates/abonnement/newC.html.twig
@@ -14,10 +14,21 @@
 
                 <div class="row gy-4">
 
-                    <
                      <div class="col-lg-8">
                         <div class="portfolio-details-slider swiper">
                                 <h3>Membership</h3>
+                                
+                                {% if highscores %}
+                                    <p>
+                                        Your wallet Balance is: {{ highscores.score }} $
+                                        <!-- by user {{ highscores.idUser }}-->
+                                    </p>
+                                {% else %}
+                                    <p>
+                                        No high scores found.
+                                    </p>
+                                {% endif %}
+                                
                                 <ul>
                                 <center>    <table border="0">
                                 <tr>
@@ -35,6 +46,7 @@
                 </div>
 
             </div>
+            
     </section><!-- End Portfolio Details Section -->
 
     </main><!-- End #main -->
