--- a/templates/abonnement/_form.html.twig
+++ b/templates/abonnement/_form.html.twig
@@ -1,24 +1,29 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Buy Membership') }}</button>
-    
-{{ form_end(form) }}
+    {{ form_widget(form._token) }}
+    {{ form_row(form.type) }}
+    {{ form_row(form.prix) }}
 
-{# Add this to the head of your template or in a separate .js file #}
+    {{ form_row(form.dateachat) }}
+    {{ form_row(form.dateexpiration) }}
+
+
+    <button class="btn">{{ button_label|default('Buy Membership') }}</button>
+
+</form>
+
+
+{# JavaScript code for updating the price #}
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         let typeDropdown = document.getElementById("abonnement_type");
-
         if (typeDropdown) {
             typeDropdown.addEventListener("change", updatePrice);
         }
     });
-
     function updatePrice() {
         let typeDropdown = document.getElementById("abonnement_type");
         let priceInput = document.getElementById("abonnement_prix");
         let selectedType = typeDropdown.value;
-
         let price;
         switch (selectedType) {
             case "Gold":
@@ -33,7 +38,6 @@
             default:
                 price = 0;
         }
-
         priceInput.value = price;
     }
 </script>
