--- a/templates/abonnement/newC.html.twig
+++ b/templates/abonnement/newC.html.twig
@@ -3,35 +3,33 @@
 {% block title %}membership{% endblock %}
 
 {% block body %}
-    {# Add these lines to display success and error messages #}
-    {% if success %}
-        <div class="alert alert-success">
-            You bought a new membership! and your new token balance is: {{ highscores.score }} $
-        </div>
-    {% endif %}
-
-    {% if error %}
-        <div class="alert alert-danger">
-            You cannot buy this abonnement because your highscore is too low.
-        </div>
-    {% endif %}
+    
+    
 
     <br>
     <br>
     <br>
     <main id="main">
 
-        <!-- ======= Portfolio Details Section ======= -->
-        <section id="portfolio-details" class="portfolio-details">
+               <!-- ======= About Us Section ======= -->
+        <section id="about" class="about">
             <div class="container">
 
-                <div class="row gy-4">
 
-                     <div class="col-lg-8">
-                        <div class="portfolio-details-slider swiper">
-                                <h3>Membership</h3>
-                                
-                                {% if highscores %}
+                <!-- ======= Contact Section ======= -->
+                <section id="contact" class="contact">
+                    <div class="container">
+
+                        <div class="section-title" data-aos="fade-up">
+                            <h2>Buy new membership</h2>
+                        </div>
+
+                        <div class="row">
+
+                            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                                <div class="contact-about">
+                                    <h3>WALLET</h3>
+                                      {% if highscores %}
                                     <p>
                                         Your wallet Balance is: {{ highscores.score }} $
                                         <!-- by user {{ highscores.idUser }}-->
@@ -41,17 +39,53 @@
                                         No high scores found.
                                     </p>
                                 {% endif %}
-                                
-                                <ul>
-                                <center>    <table border="0">
-                                <tr>
-                                <th>
-                               
-                                    {{ include('abonnement/_form.html.twig') }}
-                                </th>
-                                </tr>
+                                    
+                                </div>
+                            </div>
 
+                            <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+                                <div class="info">
+                                    <div>
+                                        <i class="bi bi-1-square-fill"></i>
+                                        <p>Step 1:<br>choose a membership price that can be equal or less than your wallet balance</p>
+                                    </div>
+
+                                    <div>
+                                        <i class="bi bi-2-square-fill"></i>
+                                        <p>Step2:<br>Click the "Buy Membership" button to confirm the buying process</p>
+                                    </div>
+
+                                    <div>
+                                        <i class="bi bi-3-square-fill"></i>
+                                     <p>Step 3:<br>make sure you confirm the recaptcha</p>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
+                                
+                              
+                                <center>
+                             
+                               <div class="form-group">
+                                    {{ include('abonnement/_form.html.twig') }}
+                              </div>   
+{% if success %}
+        <div class="alert alert-success">
+            You bought a new membership! and your new token balance is: {{ highscores.score }} $
+            <br> We sent to you an email, please check it
+        </div>
+    {% endif %}
+
+    {% if error %}
+        <div class="alert alert-danger">
+            You cannot buy this abonnement because your balance is too low.
+        </div>
+    {% endif %}
                                 </center>
+                            </div>   
                         </div>
 
                     </div>
@@ -59,9 +93,17 @@
                 </div>
 
             </div>
-            
-    </section><!-- End Portfolio Details Section -->
+ 
+                                {{ form_end(form) }}
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </section><!-- End Contact Section -->
 
     </main><!-- End #main -->
+    
 
 {% endblock %}
