--- a/templates/abonnement/newC.html.twig
+++ b/templates/abonnement/newC.html.twig
@@ -31,7 +31,7 @@
                                     <h3>WALLET</h3>
                                       {% if highscores %}
                                     <p>
-                                        Your wallet Balance is: {{ highscores.score }} $
+                                        <i class="bi bi-wallet2"></i><br>   Your wallet Balance is: {{ highscores.score }} $
                                         <!-- by user {{ highscores.idUser }}-->
                                     </p>
                                 {% else %}
