--- a/templates/highscores/index.html.twig
+++ b/templates/highscores/index.html.twig
@@ -17,7 +17,7 @@
                     
                      <div class="col-lg-8">
                         <div class="portfolio-details-slider swiper">
-                                <h3>Your wallet </h3>
+                                <h3><i class="bi bi-wallet2">Your wallet</i> </h3>
                                 <ul>
                                 <center>    <table border="0">
                                 
@@ -26,8 +26,9 @@
                
                 <th>Your balance history</th>
                <div>
-        <a href="{{ path('app_highscores_indexClient', {'order': 'asc'}) }}">Sort by Lowest</a>
-        <a href="{{ path('app_highscores_indexClient', {'order': 'desc'}) }}">Sort by Highest</a>
+        <a href="{{ path('app_highscores_indexClient', {'order': 'asc'}) }}"><i class="bi bi-arrow-down"><strong>Sort by Lowest</strong></i></a>
+        
+        <a href="{{ path('app_highscores_indexClient', {'order': 'desc'}) }}"><i class="bi bi-arrow-up"><strong>Sort by Highest</strong></i></a>
     </div>
                
             </tr>
