--- a/templates/indexClient.html.twig
+++ b/templates/indexClient.html.twig
@@ -61,8 +61,8 @@
                     <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
                     <li class="dropdown"><a href="#"><span>Membership</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                             <li>   <a href="{{ path('app_abonnement_newC') }}"><i class="bi bi-card-checklist">Buy New membership</i></a></li>
-                             <li><a href="{{ path('unity_game') }}"><i class="bi bi-controller">Earn money</i></a></li>
+                             <li>   <a href="{{ path('app_abonnement_newC') }}">Buy New membership</a></li>
+                             <li><a href="{{ path('unity_game') }}">Earn money</a></li>
                             
                 <li><a href="{{ path('app_highscores_indexClient') }}"><i class="bi bi-wallet2">Wallet</i></a></li>
 
@@ -70,7 +70,7 @@
 
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+
                     <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
